@@ -22,4 +22,3 @@ pod_coverage:
   # for either Class or method.
   private:
     - Alien::Build::Plugin::Gather::Dino
-    - Alien::Base::Dino
